--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>
         My Website and modif
     </h1>
-    <img src="img/Image.jpeg">
+<a href=""http://www.google.com">dbhdbs</a> <img src="img/Image.jpeg">
 </body>
 </html>
